Fix mobile header height expansion when subtext wraps

--- a/react-client/src/App.css
+++ b/react-client/src/App.css
@@ -1,5 +1,6 @@
 h1 > span {
   font-size: 0.5em;
+  line-height: 1;
 }
 
 h1, h2, h3 {
@@ -10,11 +11,17 @@ h3 > .iconLink {
   margin-right: 1em;
 }
 
+.App-header {
+  height: 141px;
+  height: calc(125px + 1em);
+  padding-top: 1px;
+}
+
 .App-header img {
   float: left;
   width: 125px;
   border-radius: 100%;
-  margin: -1em 1em 0 0;
+  margin: 1em 1em 0 0;
 }
 
 .App-header h1 {
